load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["smasher.go"],
    importpath = "github.com/Oncilla/break-bazel/breaker/mock_breaker",
    visibility = ["//visibility:public"],
    deps = [
        "//breaker:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)
